fix visual alignment of perm inherited notices

--- a/magpie/ui/home/static/style.css
+++ b/magpie/ui/home/static/style.css
@@ -458,7 +458,7 @@ table.panel-line td {
 .icon-info {
     width: 1.25em;
     height: 1.25em;
-    margin-top: 0.15em;
+    margin-top: 0.05em;
 }
 
 .icon-color-invert {
